tests/macros/select/mask.stderr
error: option `mask` does not exist for kind `select`
 --> $DIR/mask.rs:2:46
  |
2 |     let q = inquisition::questions![Select { mask: todo!() }];
  |                                              ^^^^
