tests/macros/select/mask.rs
fn main() {
    let q = inquisition::questions![Select { mask: todo!() }];
}
